--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://nova.hshackers.org"
 
 # More settings
 accent: "#00C2E4"
-twitter: "hshackersnova"
+twitter: "novahshackers"
 github: "hshackers/nova"
 contact: "hello at victorlourng dot com"
 organizers: "Daniel Christopher"
