Updated contact information

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "http://nova.hshackers.org"
 accent: "#00C2E4"
 twitter: "novahshackers"
 github: "hshackers/nova"
-contact: "hello at victorlourng dot com"
+contact: "novahshackers@outlook.com"
 organizers: "Daniel Christopher (https://github.com/danielchristopher1)"
 
 # Get Meetup Notifications, visible or hidden
